# sayobot_api_wrap

./: Cargo.toml  README.md
examples/: download_map.rs
src/: beatmap_info_v2.rs  beatmap_list.rs  beatmap_params.rs  beatmap_request.rs  beatmap_response.rs  enums.rs  lib.rs  resource_type.rs  static_resources.rs
